--- a/themes/hugo-coder/netlify.toml
+++ b/themes/hugo-coder/netlify.toml
@@ -1,12 +1,14 @@
 [build]
-  publish = "demo/public"
-  command = "make prepare && hugo --source demo --baseURL $URL"
+  publish = "public"
+  command = "hugo --gc --minify"
 
 [context.production.environment]
   HUGO_VERSION = "0.61.0"
+  HUGO_ENV = "production"
+  HUGO_ENABLEGITINFO = "true"
 
 [context.deploy-preview]
-  command = "make prepare && hugo --source demo --buildFuture --buildDrafts --baseURL $DEPLOY_PRIME_URL"
+  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.deploy-preview.environment]
   HUGO_VERSION = "0.61.0"
