--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    
+    "markdownPasteImage": {
+        "cdnType": "s3",
+        // "tinyPngKey": "1tKLgcKNcT8YZTZDnQX7Xj43cGv4289t",
+        "s3Bucket": "img.bmpi.dev",
+        "s3PreUrl": "https://img.bmpi.dev/",
+    }
 }
