--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,5 @@
 [context.production.environment]
   HUGO_VERSION = "0.61.0"
+[build]
+  publish = "public"
+  command = "hugo --gc --minify && node _tools/newpostcheck.js"
