--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,4 @@
   HUGO_VERSION = "0.61.0"
 [build]
   publish = "public"
-  command = "hugo --gc --minify && node _tools/newpostcheck.js"
+  command = "hugo --gc && node _tools/newpostcheck.js"
