seo improve by add image lazyload by lazysizes lib && font display swap

--- a/config.toml
+++ b/config.toml
@@ -67,7 +67,7 @@ FootnoteReturnLinkContents = "↑"
 
     math = true
     custom_css = ["/css/main.css"]
-    custom_js = []
+    custom_js = ["/js/lazysizes.min.js"]
 
     dateFormat = "2006-01-02"
 
