--- a/config.toml
+++ b/config.toml
@@ -167,7 +167,7 @@ FootnoteReturnLinkContents = "↑"
         [languages.zh-cn.params]
             author = "马大伟"
             info = "self 🐶 dev 🐱 money"
-            description = "通过自我提升（GTD、时间管理、知识管理、写作、财务管理）、全栈开发（前端、后端、移动端、DevOps）、投资交易（指数投资、基金、股票、债券）、网赚项目（SEO、Affiliate、Media Buy、Niche、社交媒体）来建立被动收入"
+            description = "通过学习（GTD、时间管理、知识管理、写作、财务管理）、技术（前端、后端、移动端、DevOps）、投资（指数投资、基金、股票、债券）、网赚项目（SEO、Affiliate、Media Buy、Niche、社交媒体）来建立被动收入"
             keywords = "自我提升、时间管理、GTD、写作、摄影、笔记管理、知识管理、财务管理、全栈开发、指数投资、基金、股票、债券、SEO、Affiliate、Media Buy、Niche、社交媒体、被动收入、网赚"
             # footercontent = "self/dev/money"
 
@@ -178,23 +178,23 @@ FootnoteReturnLinkContents = "↑"
                 weight = 1
                 url = "/about/"
             [[languages.zh-cn.menu.main]]
-                name = "自我提升"
+                name = "学习"
                 weight = 2
                 url  = "/self/"
             [[languages.zh-cn.menu.main]]
-                name = "全栈开发"
+                name = "技术"
                 weight = 3
                 url  = "/dev/"
             [[languages.zh-cn.menu.main]]
-                name = "被动收入"
+                name = "投资"
                 weight = 4
                 url  = "/money/"
             [[languages.zh-cn.menu.main]]
-                name = "项目"
+                name = "个人项目"
                 weight = 5
                 url  = "/project/"
             [[languages.zh-cn.menu.main]]
-                name = "目标"
+                name = "长期目标"
                 weight = 6
                 url  = "/goal/"
             [[languages.zh-cn.menu.main]]
