--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+    "command-runner.commands": {
+        "git-one-click": "cd ${workspaceFolder} && git add . && git commit -a --allow-empty-message -m '' && git push"
+    },
+    
     "markdownPasteImage": {
         "cdnType": "s3",
         // "tinyPngKey": "1tKLgcKNcT8YZTZDnQX7Xj43cGv4289t",
