--- a/config.toml
+++ b/config.toml
@@ -34,7 +34,9 @@ FootnoteReturnLinkContents = "↑"
 
 [params]
     author = "Dawei Ma"
-    info = "Study 🐶 Craft 🐱 Invest"
+    info1 = "📚 Lifelong Learner"
+    info2 = "👨‍💻 Full-Stack Developer"
+    info3 = "💴 ETF Trader"
     description = "Study + Craft + Invest = BMPI.dev"
     keywords = "life,dev,trade,passive income,money,developer,Self-management,IT technology,investment transactions"
     avatarurl = "images/mdw.png"
@@ -166,7 +168,9 @@ FootnoteReturnLinkContents = "↑"
 
         [languages.zh-cn.params]
             author = "马大伟"
-            info = "Study 🐶 Craft 🐱 Invest"
+            info1 = "📚 Lifelong Learner"
+            info2 = "👨‍💻 Full-Stack Developer"
+            info3 = "💴 ETF Trader"
             description = "通过学习（GTD、时间管理、知识管理、写作、财务管理）、技术创造（前端、后端、移动端、DevOps）、投资（指数投资、基金、股票、债券）、网赚项目（SEO、Affiliate、Media Buy、Niche、社交媒体）来建立被动收入"
             keywords = "自我提升、时间管理、GTD、写作、摄影、笔记管理、知识管理、财务管理、全栈开发、指数投资、基金、股票、债券、SEO、Affiliate、Media Buy、Niche、社交媒体、被动收入、网赚"
             # footercontent = "self/dev/money"
