--- a/config.toml
+++ b/config.toml
@@ -39,8 +39,8 @@ FootnoteReturnLinkContents = "↑"
     info3 = "💴 ETF Trader"
     description = "Study + Craft + Invest = BMPI.dev"
     keywords = "life,dev,trade,passive income,money,developer,Self-management,IT technology,investment transactions"
-    avatarurl = "images/mdw.png"
-    logoImg = "images/bmpi_logo.jpg"
+    avatarurl = "images/mdw2.png"
+    logoImg = "images/mdw2.png"
     header = "BMPI.dev"
 
     twitter = "madawei2699"
@@ -48,8 +48,8 @@ FootnoteReturnLinkContents = "↑"
     telegram = "bmpi365"
     zhihu = "improve365"
 
-    favicon_32 = "images/f/favicon-32x32.png"
-    favicon_16 = "images/f/favicon-16x16.png"
+    favicon_32 = "images/f3/favicon-32x32.png"
+    favicon_16 = "images/f3/favicon-16x16.png"
 
     # footercontent = "self/dev/money"
 
