--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,6 +24,12 @@ jobs:
       - name: Build
         run: hugo --gc
 
+      - name: New Post Check
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+        run: node _tools/newpostcheck.js
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/master'
