--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '12'
-        run: node _tools/newpostcheck.js
+      - run: node _tools/newpostcheck.js
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
