fix github node actions dependence error

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '12'
+      - run: npm install node-fetch
       - run: node _tools/newpostcheck.js
 
       - name: Deploy
