--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,6 +24,12 @@ jobs:
       - name: Build
         run: hugo --gc
 
+      - name: create env file
+        run: |
+          touch .env
+          echo WEBPUSHRKEY =${{ secrets.WEBPUSHRKEY }} >> .env
+          echo WEBPUSHRAUTHTOKEN =${{ secrets.WEBPUSHRAUTHTOKEN }} >> .env
+
       - name: New Post Check
         uses: actions/setup-node@v2
         with:
