update home page

--- a/config.toml
+++ b/config.toml
@@ -36,9 +36,12 @@ FootnoteReturnLinkContents = "↑"
 
 [params]
     author = "Dawei Ma"
-    info1 = "📚 Lifelong Learner"
-    info2 = "👨‍💻 Full-Stack Developer"
-    info3 = "💴 ETF Trader"
+    info1 = "📚"
+    info1Tooltip = "Lifelong Learner"
+    info2 = "👨‍💻"
+    info2Tooltip = "Full-Stack Developer"
+    info3 = "💴"
+    info3Tooltip = "ETF Trader"
     description = "Study + Craft + Invest = BMPI.dev"
     keywords = "life,dev,trade,passive income,money,developer,Self-management,IT technology,investment transactions"
     avatarurl = "images/mdw2.png"
@@ -182,9 +185,12 @@ FootnoteReturnLinkContents = "↑"
 
         [languages.zh-cn.params]
             author = "马大伟"
-            info1 = "📚 Lifelong Learner"
-            info2 = "👨‍💻 Full-Stack Developer"
-            info3 = "💴 ETF Trader"
+            info1 = "📚"
+            info1Tooltip = "终身学习/认知杠杆"
+            info2 = "👨‍💻"
+            info2Tooltip = "全栈技术/时间杠杆"
+            info3 = "💴"
+            info3Tooltip = "投资理财/财务杠杆"
             description = "通过学习（GTD、时间管理、知识管理、写作、财务管理）、技术创造（前端、后端、移动端、DevOps）、投资（指数投资、基金、股票、债券）、网赚项目（SEO、Affiliate、Media Buy、Niche、社交媒体）来建立被动收入"
             keywords = "自我提升、时间管理、GTD、写作、摄影、笔记管理、知识管理、财务管理、全栈开发、指数投资、基金、股票、债券、SEO、Affiliate、Media Buy、Niche、社交媒体、被动收入、网赚"
             # footercontent = "self/dev/money"
