--- a/config.toml
+++ b/config.toml
@@ -190,8 +190,7 @@ FootnoteReturnLinkContents = "↑"
             info2Tooltip = "全栈技术/时间杠杆"
             info3 = "💴"
             info3Tooltip = "投资理财/财务杠杆"
-            description = "通过学习（GTD、时间管理、知识管理、写作、财务管理）、技术创造（前端、后端、移动端、DevOps）、投资（指数投资、基金、股票、债券）、网赚项目（SEO、Affiliate、Media Buy、Niche、社交媒体）来建立被动收入"
-            keywords = "自我提升、时间管理、GTD、写作、摄影、笔记管理、知识管理、财务管理、全栈开发、指数投资、基金、股票、债券、SEO、Affiliate、Media Buy、Niche、社交媒体、被动收入、网赚"
+            description = "终身学习（认知杠杆）* 全栈技术（时间杠杆）* 投资理财（财务杠杆） => 被动收入（人生杠杆）"
             # footercontent = "self/dev/money"
 
         [languages.zh-cn.menu]
